--- a/charts/heqet/templates/heqet-apps.yaml
+++ b/charts/heqet/templates/heqet-apps.yaml
@@ -41,21 +41,29 @@ spec:
           value: {{ .value | quote }}
          {{- end }}
         {{- end }}
-      {{- end -}}
+      {{- end }}
 
-      {{- if or (and $.Values.ingress.enabled .vhost) .values }}
       values: |
+      {{- if or (and $.Values.ingress.enabled .vhost) .values }}
         {{- if and $.Values.ingress.enabled .vhost }}
           {{- $shift := empty .ingress_prefix -}}
           {{- $indent := ternary 8 10 $shift -}}
           {{- if .ingress_prefix }}
 {{ .ingress_prefix | indent 8 }}:
-          {{- end }}
+          {{- end -}}
           {{- include "heqet.ingress" . | indent $indent -}}
+
         {{- end }}
 {{- if .values }}
 {{ toYaml .values | default "" | indent 8 -}}
 {{- end }}
+          {{- $shift := empty .pod_spec_prefix -}}
+          {{- $indent := ternary 8 10 $shift -}}
+          {{- if .pod_spec_ingress_prefix }}
+{{ .pod_spec_prefix | indent 8 }}:
+          {{- end }}
+          {{- include "vault.injection" . | indent $indent -}}
+
       {{- end -}}
     {{- end }}
   syncPolicy:
