fix(heqet): values as string

--- a/templates/heqet-apps.yaml
+++ b/templates/heqet-apps.yaml
@@ -41,7 +41,7 @@ spec:
          {{- end }}
         {{- end }}
       {{- end }}
-      values:
+      values: |
 {{- $values := $.Files.Get (printf "values.d/%s.yaml" .name ) | fromYaml | default dict }}
 {{- $context := . }}
 {{- range $gen, $vals := $.Values.generators }}
