--- a/values.d/nginx-ingress.yaml
+++ b/values.d/nginx-ingress.yaml
@@ -1,10 +1,10 @@
 controller:
   admissionWebhooks:
-    enabled: false
+    enabled: true
     patch:
-      enabled: false
+      enabled: true
   publishService:
-    enabled: false
+    enabled: true
   image:
     repository: bitnami/nginx-ingress-controller
 
