--- a/values.d/cert-manager.yaml
+++ b/values.d/cert-manager.yaml
@@ -93,7 +93,7 @@ ingressShim: {}
   # defaultACMEDNS01ChallengeProvider: ""
 
 webhook:
-  enabled: true
+  enabled: false
 
 # Use these variables to configure the HTTP_PROXY environment variables
 # http_proxy: "http://proxy:8080"
