--- a/values.yaml
+++ b/values.yaml
@@ -19,7 +19,10 @@ generators:
     # ACME / Letsencrypt Injector
     acme:
       enabled: true
-      server:
+
+      # Default: https://acme-staging-v02.api.letsencrypt.org/directory
+      # Change to 'https://acme-v02.api.letsencrypt.org/directory' for real/trusted LE Certs
+      server: https://acme-v02.api.letsencrypt.org/directory
       email: nold@gnu.one
 
 
