--- a/values.d/kubernetes-dashboard.yaml
+++ b/values.d/kubernetes-dashboard.yaml
@@ -110,7 +110,7 @@ resources:
 ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
   ##
-  enabled: false
+  enabled: true
 
   ## Kubernetes Dashboard Ingress annotations
   ##
