--- a/values.yaml
+++ b/values.yaml
@@ -132,9 +132,14 @@ apps:
     ingress: ui
     vhost: kubeless.lib42.me
   
-  - name: eclipse-che
+  - name: che
     repoURL: https://github.com/Nold360/charts-1
     path: charts/che
     ingress: che
     vhost: che.lib42.me
     
+  - name: polaris
+    repoURL: https://github.com/FairwindsOps/charts
+    path: stable/polaris
+    ingress: dashboard
+    vhost: polaris.lib42.me
