--- a/values.d/che.yaml
+++ b/values.d/che.yaml
@@ -28,7 +28,7 @@ cheKeycloakClientId: "che-public"
 
 global:
   ## ImageTag used for all che related images
-  cheImageTag: nightly
+  cheImageTag: 7.7.0
 
   multiuser: false
   #  This value can be passed if custom Oidc provider is used, and there is no need to deploy keycloak in multiuser mode
@@ -65,7 +65,7 @@ global:
   gitHubClientID: ""
   gitHubClientSecret: ""
   pvcClaim: "1Gi"
-  cheWorkspacesNamespace: "eclipse-che"
+  cheWorkspacesNamespace: "che"
   # Service account name that will be mounted to workspaces pods
   # Note that:
   # if `cheWorkspacesNamespace` is configured then service account with configured name will be created by helm chart during deploying Che
