--- a/templates/dashboard/ingress.yaml
+++ b/templates/dashboard/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: {{ .ingressClass | default "nginx" }}
     kubernetes.io/tls-acme: "true"
     cert-manager.io/cluster-issuer: {{ .clusterIssuer | default "letsencrypt" }}
-    external-dns.alpha.kubernetes.io/hostname: {{ .vhost }}
+    external-dns.alpha.kubernetes.io/hostname: {{ $.Values.defaults.domain }}
   labels:
     app: hqt-dashboard
   namespace: heqet
