--- a/values.d/che.yaml
+++ b/values.d/che.yaml
@@ -94,6 +94,7 @@ che:
     annotations:
       nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
       nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
     devfileRegistryUrl: "https://devfile-registry-che.lib42.me/"
     pluginRegistryUrl: "https://plugin-registry-che.lib42.me/v3"
 
@@ -104,6 +105,7 @@ workspace:
       nginx.ingress.kubernetes.io/rewrite-target: /$1
       nginx.ingress.kubernetes.io/proxy-connect-timeout: 3600
       nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
 
 cheDevfileRegistry:
   deploy: true
