--- a/manifests/argocd.yaml
+++ b/manifests/argocd.yaml
@@ -2378,7 +2378,7 @@ spec:
         - "20"
         - --operation-processors
         - "10"
-        image: argoproj/argocd:v1.5.3
+        image: argoproj/argocd:v1.6.0-rc1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -2434,7 +2434,7 @@ spec:
         - -n
         - /usr/local/bin/argocd-util
         - /shared
-        image: argoproj/argocd:v1.5.3
+        image: argoproj/argocd:v1.6.0-rc1
         imagePullPolicy: Always
         name: copyutil
         volumeMounts:
@@ -2498,7 +2498,7 @@ spec:
         - argocd-repo-server
         - --redis
         - argocd-redis:6379
-        image: argoproj/argocd:v1.5.3
+        image: argoproj/argocd:v1.6.0-rc1
         imagePullPolicy: Always
         livenessProbe:
           initialDelaySeconds: 5
@@ -2549,7 +2549,7 @@ spec:
         - argocd-server
         - --staticassets
         - /shared/app
-        image: argoproj/argocd:v1.5.3
+        image: argoproj/argocd:v1.6.0-rc1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
