--- a/values.d/argocd.yaml
+++ b/values.d/argocd.yaml
@@ -10,7 +10,7 @@ installCRDs: true
 global:
   image:
     repository: argoproj/argocd
-    tag: v1.5.5
+    tag: v1.6.0-rc1
     imagePullPolicy: IfNotPresent
   securityContext: {}
   #  runAsUser: 999
@@ -28,7 +28,7 @@ controller:
 
   image:
     repository: # argoproj/argocd
-    tag: v1.5.5
+    tag: v1.6.0-rc1
     imagePullPolicy: # IfNotPresent
 
   ## Argo controller commandline flags
@@ -318,8 +318,8 @@ server:
     targetMemoryUtilizationPercentage: 50
 
   image:
-    repository: # argoproj/argocd
-    tag: # v1.5.4
+    repository: argoproj/argocd
+    tag: v1.6.0-rc1
     imagePullPolicy: # IfNotPresent
 
   ## Additional command line arguments to pass to argocd-server
@@ -593,8 +593,8 @@ repoServer:
     targetMemoryUtilizationPercentage: 50
 
   image:
-    repository: # argoproj/argocd
-    tag: # v1.5.4
+    repository: argoproj/argocd
+    tag: v1.6.0-rc1
     imagePullPolicy: # IfNotPresent
 
   ## Additional command line arguments to pass to argocd-repo-server
