--- a/crds/cert-manager.yaml
+++ b/crds/cert-manager.yaml
@@ -20,6 +20,7 @@ metadata:
   name: issuers.cert-manager.io
   annotations:
     cert-manager.io/inject-ca-from-secret: 'cert-manager/cert-manager-webhook-ca'
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app: 'cert-manager'
     app.kubernetes.io/name: 'cert-manager'
@@ -1827,6 +1828,7 @@ metadata:
   name: orders.acme.cert-manager.io
   annotations:
     cert-manager.io/inject-ca-from-secret: 'cert-manager/cert-manager-webhook-ca'
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app: 'cert-manager'
     app.kubernetes.io/name: 'cert-manager'
@@ -2067,6 +2069,7 @@ metadata:
   name: certificaterequests.cert-manager.io
   annotations:
     cert-manager.io/inject-ca-from-secret: 'cert-manager/cert-manager-webhook-ca'
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app: 'cert-manager'
     app.kubernetes.io/name: 'cert-manager'
@@ -2278,6 +2281,7 @@ metadata:
   name: certificates.cert-manager.io
   annotations:
     cert-manager.io/inject-ca-from-secret: 'cert-manager/cert-manager-webhook-ca'
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app: 'cert-manager'
     app.kubernetes.io/name: 'cert-manager'
@@ -3034,6 +3038,7 @@ metadata:
   name: challenges.acme.cert-manager.io
   annotations:
     cert-manager.io/inject-ca-from-secret: 'cert-manager/cert-manager-webhook-ca'
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app: 'cert-manager'
     app.kubernetes.io/name: 'cert-manager'
@@ -4487,6 +4492,7 @@ metadata:
   name: clusterissuers.cert-manager.io
   annotations:
     cert-manager.io/inject-ca-from-secret: 'cert-manager/cert-manager-webhook-ca'
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app: 'cert-manager'
     app.kubernetes.io/name: 'cert-manager'
